# PII-Projekt2

Grove_OLED_Display/: CMakeLists.txt  main.c
HL-APP/Help/: CMakeLists.txt  app_manifest.json  main.c
InterCoreApp/IntercoreComms_HighLevelApp/: main.c
InterCoreApp/IntercoreComms_RTApp_MT3620_BareMetal/: main.c
Knowledge_Base/: Wissenswertes.txt  azureCommands.txt
RT_Application_Drivers/RTCore_Blank/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  app_manifest.json  linker.ld  main.c
RT_Application_Drivers/RTCore_Blank/Grove_Shield_Driver/include/: GroveI2C.h  GroveUart.h
RT_Application_Drivers/RTCore_Blank/Grove_Shield_Driver/src/: GroveUart.c  Grove_I2C.c
RT_Application_Drivers/RTCore_Blank/Intercore/: mt3620-baremetal.h
RT_Application_Drivers/RTCore_Blank/MT3620_Grove_Shield_Library/: CMakeLists.txt
RT_Application_Drivers/RTCore_Blank/MT3620_Grove_Shield_Library/include/HAL/: GroveUART.h
RT_Application_Drivers/RTCore_Blank/lib/: UART.c
RT_test/: CMakeLists.txt  FreeRTOSConfig.h  app_manifest.json  linker.ld  main.c
Send_telemetry/: app_manifest.json  main.c
UltrasonicTest/: CMakeCache.txt  CMakeLists.txt  app_manifest.json  main.c
firstUltrasonicTest/UltrasonicTest/: CMakeLists.txt  app_manifest.json  main.c
src/: CMakeWorkspaceSettings.json  database.json  intercore.code-workspace  launch.vs.json  visualize.py
src/HighLevelApp/: CMakeLists.txt  app_manifest.json  main.c
src/HighLevelApp/common/: CMakeLists.txt  azure_iot.c  connection_iot_hub.c
src/RealTimeApp/: CMakeLists.txt  FreeRTOSConfig.h  app_manifest.json  main.c
src/RealTimeApp/Grove_Shield_Driver/include/: GroveI2C.h
src/RealTimeApp/Grove_Shield_Driver/src/: Grove_I2C.c
src/RealTimeApp/PIIOT/: buzzer.c  buzzer.h  communication.c  communication.h  general.c  general.h  motor.c  motor.h  ultraschall.c  ultraschall.h
src/Visualization/: visualize.py
